# glua

./: .gitignore  README.md  build.bat  glex.h  test.bat
examples/: main.lua
src/: CMakeLists.txt  gl.h  glex.c  glex.h  glua.c  glutil.c  glutil.h  main.c  window.h
test/: main.lua
